--- a/app/templates/reservation.html
+++ b/app/templates/reservation.html
@@ -16,6 +16,9 @@
                         <h3 class="card-title mb-0">Confirme sua Reserva</h3>
                     </div>
                     <div class="card-body">
+                        <div class="alert alert-warning mb-3">
+                            <div id="timer">Tempo restante: --:--</div>
+                        </div>
                         <form method="POST">
                             {{ form.hidden_tag() }}
                             <div class="mb-3">
